force-app/main/default/objects/CustomerSurvey__c/CustomerSurvey__c.object-meta.xml
<CustomObject>
    <label>Customer Survey</label>
    <pluralLabel>Customer Surveys</pluralLabel>
    <nameField>
        <label>Survey Name</label>
        <type>AutoNumber</type>
        <displayFormat>CS-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>A/S 완료 후 고객 만족도 설문 응답을 관리하는 오브젝트</description>
</CustomObject>