force-app/main/default/objects/CustomerSurvey__c/fields/AppointmentId__c.field-meta.xml
<CustomField>
    <fullName>AppointmentId__c</fullName>
    <label>A/S 예약</label>
    <type>Lookup</type>
    <referenceTo>ServiceAppointment__c</referenceTo>
    <relationshipName>CustomerSurveys</relationshipName>
    <relationshipLabel>고객 설문 목록</relationshipLabel>
</CustomField>