force-app/main/default/objects/CustomerSurvey__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <label>고객 의견</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>