force-app/main/default/objects/CustomerSurvey__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>만족도 점수</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>