force-app/main/default/objects/CustomerSurvey__c/fields/SentDate__c.field-meta.xml
<CustomField>
    <fullName>SentDate__c</fullName>
    <label>발송일</label>
    <type>Date</type>
</CustomField>