force-app/main/default/objects/CustomerSurvey__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>설문 상태</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>발송대기</fullName><default>true</default><label>발송대기</label></value>
            <value><fullName>발송완료</fullName><default>false</default><label>발송완료</label></value>
            <value><fullName>응답완료</fullName><default>false</default><label>응답완료</label></value>
            <value><fullName>미응답</fullName><default>false</default><label>미응답</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>